# leafcapture

./: AllivedCameras.h  CMakeLists.txt  Camera.h  Camera2.h  Capture.h  README.md  Serial.h  Window.h  calibrate.cpp  camerainfo.txt  main.cpp  measure.cpp  test_exp.cpp  turnoff.cpp  viewer.cpp
python/: aruco.py  calibrate_camera_white_balance.py  calibtrate_camera.py  color_cali.py  compute_light_pos.py  concatenate_marker.py  demosic.py  img_h.hdr  import_sample_gradient.py  plot_reponse.py  white_balance.py
